- Fixed environment LaTeX for aligned environment - Added minimum width to second column for align environments

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -542,6 +542,7 @@
       }
       td:nth-child(even) {
         text-align: left;
+        min-width: 50px;
       }
     }
   }
